@@ -1,3 +1,7 @@
+2011-02-24  Roland McGrath  <roland@redhat.com>
+
+	* Makefile.am (TESTS): Put the slow dwarfcmp tests last.
+
 2011-02-02  Josh Stone  <jistone@redhat.com>
 
 	* run-prelink-addr-test.sh: Add testfile55, 32 and 64-bit.
